--- a/DIFFFT.html
+++ b/DIFFFT.html
@@ -239,11 +239,11 @@ layout: default
             const stage1 = [];
             for(let i=0;i<n;i++){
                 if(math.round(a[i].i,2) < 0){
-                    stage1[i] =String(math.round( a[i].r,2))+math.round(a[i].i,2)+"j";
+                    stage1[i] =String(math.round( a[i].r,2))+math.round(a[i].i,2)+"i";
                 } else if(math.round(a[i].i,2) == 0) {
                     stage1[i] =math.round( a[i].r,2);
                 } else {
-                    stage1[i] =math.round( a[i].r,2)+"+"+math.round(a[i].i,2)+"j";
+                    stage1[i] =math.round( a[i].r,2)+"+"+math.round(a[i].i,2)+"i";
                 }
             }
             document.getElementById("stage1seqoffft8").innerText += stage1;
@@ -259,11 +259,11 @@ layout: default
             const stage2 = [];
             for(let i=0;i<n;i++){
                 if(math.round(b[i].i,2) < 0) {
-                    stage2[i] =String(math.round( b[i].r,2))+math.round(b[i].i,2)+"j";
+                    stage2[i] =String(math.round( b[i].r,2))+math.round(b[i].i,2)+"i";
                 } else if(math.round(b[i].i,2) == 0) {
                     stage2[i] =math.round( b[i].r,2);
                 } else {
-                    stage2[i] =math.round( b[i].r,2)+"+"+math.round(b[i].i,2)+"j";
+                    stage2[i] =math.round( b[i].r,2)+"+"+math.round(b[i].i,2)+"i";
                 }
             }
             document.getElementById("stage2seqoffft8").innerText += stage2;
@@ -280,19 +280,19 @@ layout: default
             z=[0,4,2,6,1,5,3,7];
             for(let i=0;i<n;i++){           
                 if(math.round(res[z[i]].i,2) < 0) {
-                    bitrev[i] = String(math.round(res[z[i]].r,2))+ math.round(res[z[i]].i,2)+"j";
+                    bitrev[i] = String(math.round(res[z[i]].r,2))+ math.round(res[z[i]].i,2)+"i";
                 } else if(math.round(res[z[i]].i,2) == 0) {
                     bitrev[i] = math.round(res[z[i]].r,2);
                 } else {
-                    bitrev[i] = math.round(res[z[i]].r,2)+"+"+ math.round(res[z[i]].i,2)+"j";
+                    bitrev[i] = math.round(res[z[i]].r,2)+"+"+ math.round(res[z[i]].i,2)+"i";
                 }
 
                 if(math.round(res[i].i,2) < 0) {
-                    output[i] = String(math.round(res[i].r,2))+ math.round(res[i].i,2)+"j";
+                    output[i] = String(math.round(res[i].r,2))+ math.round(res[i].i,2)+"i";
                 } else if(math.round(res[i].i,2) == 0) {
                     output[i] = math.round(res[i].r,2);
                 } else {
-                    output[i] = math.round(res[i].r,2)+"+"+ math.round(res[i].i,2)+"j";
+                    output[i] = math.round(res[i].r,2)+"+"+ math.round(res[i].i,2)+"i";
                 }
             }
             document.getElementById("bitreversal").innerText += output;
@@ -324,11 +324,11 @@ layout: default
             const stage1 = [];
             for(let i=0;i<n;i++){
                 if(math.round(a[i].i,2) < 0){
-                    stage1[i] =String(math.round( a[i].r,2))+math.round(a[i].i,2)+"j";
+                    stage1[i] =String(math.round( a[i].r,2))+math.round(a[i].i,2)+"i";
                 } else if(math.round(a[i].i,2) == 0) {
                     stage1[i] =math.round( a[i].r,2);
                 } else {
-                    stage1[i] =math.round( a[i].r,2)+"+"+math.round(a[i].i,2)+"j";
+                    stage1[i] =math.round( a[i].r,2)+"+"+math.round(a[i].i,2)+"i";
                 }
             }
             document.getElementById("stage1seqoffft4").innerText += stage1;
@@ -344,19 +344,19 @@ layout: default
             z=[0,2,1,3];
             for(let i=0;i<n;i++){           
                 if(math.round(res[z[i]].i,2) < 0) {
-                    bitrev[i] = String(math.round(res[z[i]].r,2))+ math.round(res[z[i]].i,2)+"j";
+                    bitrev[i] = String(math.round(res[z[i]].r,2))+ math.round(res[z[i]].i,2)+"i";
                 } else if(math.round(res[z[i]].i,2) == 0) {
                     bitrev[i] = math.round(res[z[i]].r,2);
                 } else {
-                    bitrev[i] = math.round(res[z[i]].r,2)+"+"+ math.round(res[z[i]].i,2)+"j";
+                    bitrev[i] = math.round(res[z[i]].r,2)+"+"+ math.round(res[z[i]].i,2)+"i";
                 }
 
                 if(math.round(res[i].i,2) < 0) {
-                    output[i] = String(math.round(res[i].r,2))+ math.round(res[i].i,2)+"j";
+                    output[i] = String(math.round(res[i].r,2))+ math.round(res[i].i,2)+"i";
                 } else if(math.round(res[i].i,2) == 0) {
                     output[i] = math.round(res[i].r,2);
                 } else {
-                    output[i] = math.round(res[i].r,2)+"+"+ math.round(res[i].i,2)+"j";
+                    output[i] = math.round(res[i].r,2)+"+"+ math.round(res[i].i,2)+"i";
                 }
             }
             document.getElementById("bitreversaloffft4").innerText += output;
